# Lisk-Name-Server

./: .gitignore  package.json
backend/: index.ts  nodemon.json  package.json  tsconfig.json
backend/middleware/: auth.ts
backend/routes/v1/: apiKey.ts  index.ts  resolve.ts
backend/utils/: apiKey.ts  database.ts  setup.ts
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/auction/: auction.html  waitlist.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: About.tsx  BrandLogos.tsx  CustomCursor.tsx  Features.tsx  Header.tsx  Hero.tsx  NameModal.tsx  Particle.tsx  SDK.tsx  SearchBar.tsx  Typing.tsx
frontend/src/context/: LiskNameService.json  LiskNameService.tsx  constants.ts  events.ts  service_utils.ts
frontend/src/lib/: utils.ts  wagmiconfig.ts
frontend/src/pages/: Developer.tsx  Landing.tsx
sdk/js_ts/: README.md  package.json  tsconfig.json
sdk/js_ts/src/: index.ts
sdk/js_ts/test/: resolve.ts
sdk/python/: README.md  pyproject.toml  requirements.txt  setup.cfg
sdk/python/src/lisk_name_service/: __init__.py  client.py
sdk/python/test/: test_client.py
smart_contract/: hardhat.config.ts  package.json
smart_contract/contracts/: LiskNameService.sol  LiskNameServiceV2.sol
smart_contract/scripts/: deploy.ts  upgrade.ts
