[metadata]
name = lisk-name-service
version = 0.1.0
description = Python SDK for Lisk Name Service (.lisk)
long_description = file: README.md
long_description_content_type = text/markdown
author = Wiseman Umanah
readme = "README.md"
license = MIT

[options]
package_dir =
    =src
packages = find:
install_requires =
    requests
python_requires = >=3.7
